# chroma-blotch-corrector

./: .gitignore  README.md  chroma_blotch_correction.py  color_mottle_correction.py  pyproject.toml  requirements.txt  siril_blotch_equalizer.py
